4_css-javascript-fundamentals/javascript_challenges/7_build-a-search-bar/alt_solution/styles.css
/*=========================================*/
/*  Global Styles  */

body {
    font-family: 'Oswald', sans-serif;
    background-color: black;
    color: white;
}

img {
    width: 800px;
}

/*=========================================*/
/*  Carousel  */

.carousel {
    position: relative;
    max-width: 800px;
    margin: 50px auto 0 auto;
    filter: drop-shadow(0 2px 5px gray);
}

/* images */
.carousel-item img {
    display: none;
    width: 100%;
    max-width: 800px;
}

.carousel-item-visible img{
    display: block;
    animation-duration: 500ms;
    animation-name: fadeIn;
}

@keyframes fadeIn {
    from {
        opacity: 35%;
    }

    to {
        opacity: 100%;
    }
}

/* image description */
li {
    margin-top: 0;
    margin-bottom: 4px;
}

.title,
.sub-title {
    font-weight: 600;
}
/*TODO -- HTML -- Description: fix overlap*/
.description {
    box-sizing: border-box;
    font-size: 12px;
    text-align: right;
}

.title {
    font-size: 18px;
    margin: 0;
    margin-bottom: 7px;
}

.info-animation {
    animation-name: textFadeIn;
    animation-duration: 2000ms;
}

@keyframes textFadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.details {
    line-height: 1.5rem;
    margin-bottom: 10px;
    list-style-type: none;
    display: grid;
    justify-content: right;
}

.imdb-logo {
    width: 45px;
    margin-top: 9px;
}

/* Image Description Media Queries */
@media screen and (min-width: 600px){
    .title {
        font-size: 18px;
    }

    .description {
        font-size: 12px;
        position: absolute;
        top: 60%;
        left: 69%;
        min-width: 150px;
        max-width: 250px;
    }
}

@media screen and (min-width: 700px){
    .title {
        font-size: 26px;
    }

    .description {
        font-size: 17px;
        top: 65%;
        left: 72%;
    }
}

/*=========================================*/
/*  Buttons  / Interface */

.carousel-actions {
    position: absolute;
    display: flex;
    width: 100%;
    justify-content: space-between;
    top: 50%;
    transform: translateY(-125%);
}

@media screen and (min-width: 599px){
    .carousel-actions {
        transform: translateY(-50%);
    }
}

.buttons {
    display: inline-block;
    border: none;
    border-radius: 50%;
    opacity: 30%;
    padding: 9px 15px;
    font-size: 22px;
    text-align: center;
    font-weight: bold;
}

@media screen and (min-width: 500px){
    .buttons {
        padding: 12px 20px;
        font-size: 30px;
    }
}

#carousel-button-previous {
    margin-left: 15px;
}

#carousel-button-next {
    margin-right: 15px;
}

/* button-states */
.buttons:hover,
.buttons:focus {
    cursor: pointer;
    opacity: 90%;
    background-color: #007E93;
    color: #ff763a;
}

.buttons:active {
    background-color: #009cb1;
    color: #ff763a;
}

/* Progress bar */
.progress-bar {
    display: flex;
    justify-content: center;
}

.bar {
    background-color: #ff763a;
    border-radius: 3px;
    width: 8.75%;
    height: 3.5px;
    margin: 1.25%;
}

.active {
    background-color: #fe2000;
    filter: drop-shadow(0 4px 7px #ff0000);
}

